--- a/block-BHaabu/index.html
+++ b/block-BHaabu/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="background">
-       <div class="flex container">
-        <div class="box">Box1</div>
-        <div class="box">Box1</div>
-        <div class="box">Box1</div>
-       </div>
+    <header class="container">
+        <h1>Background and Gradients</h1>
+    </header>
+    <main>
+       <section class="flex container  margin-top">
+        <div class="box box1 center">Box 1</div>
+        <div class="box box2 center">Box 2</div>
+        <div class="box box3 center">Box 3</div>
+       </section>
+       <section class="center container margin-top">
+           <div class="box big-box center">Box 4</div>
+       </section>
     </main>
     
 </body>
